src/test/deca/context/valid/LE/methodeDeAttri.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;

    int fct (int valeur) {
        this.a = 5 ;
        return 5 ;
    }
}

class C2 {
    C1 a ;

    void constructeur () {
        this.a = new C1() ;
    }
}

{
    C2 variable = new C2() ;
    int retour ;
    variable.constructeur() ;
    retour = variable.a.fct(7) ;


    
    



    if (retour == 5) {
        println ("Bon resultat") ;
    }

    else {
        println("mauvais resultat") ;
    }

}

