src/test/deca/context/invalid/LE/this1.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;

    void C1 (int valeur ) {
        this.b = valeur ;
    }
}